--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <base href="/">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Olivia & Enrico Wedding Template</title>
+    <title>Сватбата на Ани и Димитър</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="assets/images/favicon.png" />
 
